--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "multipart-mixed-parser": "^0.1.3",
     "node-rest-client": "^3.1.0",
     "parse-multipart": "^1.0.4",
+    "request": "^2.88.2",
     "save": "^2.4.0",
-    "xml-js": "^1.6.11",
-    "ssh2-sftp-client": "5.2.1"
+    "ssh2-sftp-client": "5.2.1",
+    "xml-js": "^1.6.11"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^4.0.0"
